Input of icae_ffv is ethanol, not lightoil

--- a/message_ix_models/data/transport/technology.yaml
+++ b/message_ix_models/data/transport/technology.yaml
@@ -31,7 +31,7 @@ IAHm_ptrp:
 
 ICAe_ffv:
   description: Internal combustion engine light-duty vehicle using biofuels
-  input: {commodity: lightoil}
+  input: {commodity: ethanol}
   report: LDV_ffv
 
 ICAm_ptrp:
