--- a/message_ix_models/data/transport/set.yaml
+++ b/message_ix_models/data/transport/set.yaml
@@ -126,6 +126,16 @@ commodity:
       units: Gp km
       demand: true
 
+emission:
+  # commented: as of 2022-08, most MESSAGEix-GLOBIOM models have names like "TCE_CO2",
+  # "CO2_*", etc., but not CO2 directly. Thus we can't require it, and must instead add
+  # it (below)
+  # require:
+  # - CO2
+
+  add:
+  - CO2
+
 level:
   require:
   - final   # Fuel consumption in transport.
@@ -167,6 +177,9 @@ unit:
     MUSD / v: 10⁶ USD per vehicle
     # for US-TIMES MA3T
     USD / vehicle: USD per vehicle
+
+    # Emissions
+    kt / Gv / km: kilotonnes emitted per 10⁹ vehicle kilometres
 
 # MA3T sets
 census_division:
