Ensure iamc output from transport reporting is also written to file

--- a/message_ix_models/data/transport/report.yaml
+++ b/message_ix_models/data/transport/report.yaml
@@ -123,12 +123,14 @@ general:
   inputs: [ scenario, transport iamc ]
 
 # Collecting all others
+- key: transport iamc all
+  comp: null
+  inputs: [ transport iamc file, transport iamc store ]
 - key: transport all
   comp: null
   inputs:
   # - transport plots
-  - transport iamc file
-  - transport iamc store
+  - transport iamc all
 
 # Groups of keys for re-use
 _iamc formats:
