--- a/message_ix_models/data/transport/report.yaml
+++ b/message_ix_models/data/transport/report.yaml
@@ -66,11 +66,16 @@ general:
   args: {units: "Tm / a"}
   sums: true
 
-# Adjust for units of ACT not being carried:
+# Units of ACT are not carried, so must correct here:
 # - Add [time]: -1
 # - Remove [vehicle]: -1, [distance]: -1
+#
+# When run together with global.yaml reporting, emi:* is assigned units
+# of "Mt / year". Using apply_units() causes these to be *converted* to
+# kt/a, i.e. increasing the magnitude; so use assign_units() instead.
+Adjust for units of ACT not being carried:
 - key: emi:*:transport+units
-  comp: apply_units
+  comp: assign_units
   inputs: [ emi::transport ]
   args: {units: "kt / a"}
   sums: true
