Add name: field for one transport technology

--- a/message_ix_models/data/transport/technology.yaml
+++ b/message_ix_models/data/transport/technology.yaml
@@ -5,6 +5,7 @@
 #      Christoph's folders.”
 
 ELC_100:
+  name: Battery-electric LDV
   description: >-
     Battery-electric light-duty vehicle using electricity-only (100-mile
     all-electric range)
