Add "mt / gv / km" to transport units

--- a/message_ix_models/data/transport/set.yaml
+++ b/message_ix_models/data/transport/set.yaml
@@ -207,6 +207,7 @@ unit:
 
     # Emissions
     kt / Gv / km: kilotonnes emitted per 10⁹ vehicle kilometres
+    Mt / Gv / km: megatonnes emitted per 10⁹ vehicle kilometres
 
 # MA3T sets
 census_division:
