Use consistent "is-disutility" annotation on virtual techs

--- a/message_ix_models/data/transport/technology.yaml
+++ b/message_ix_models/data/transport/technology.yaml
@@ -303,7 +303,7 @@ LDV:
 "transport {technology.id} load factor":
   _generate: {technology: LDV}
   name: LDV occupancy
-  disutility formulation: true
+  is-disutility: true
 
 2W:
   name: Two-wheelers and motorcycles
