Add messageix-transport workflow on self-hosted runner

--- a/message_ix_models/data/transport/report.yaml
+++ b/message_ix_models/data/transport/report.yaml
@@ -130,7 +130,7 @@ general:
 - key: transport all
   comp: null
   inputs:
-  # - transport plots
+  - transport plots
   - transport iamc all
 
 # Groups of keys for re-use
